Fixed overlapping issue with Menu Items
Added a lil to the margin.

--- a/menu.css
+++ b/menu.css
@@ -9,8 +9,11 @@
     align-items: center;
     border-radius: 15px;
     box-shadow: -5px 5px black;
+    
 }
+
 h1{
     font-family: 'Mansalva', cursive;
     text-align: center;
+    margin-top: 10px;
 }
